--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,18 @@
-<div class="container">
-<h1>Lists</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1503726876301-67e54d319b60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1578&q=80);">
+  <div class="container">
+    <h1>Movie Lists</h1>
+  </div>
+</div>
+<div class="container mt-5">
+<%= link_to new_list_path do %>
+ <i class="fas fa-plus-square btn-light"></i>
+<% end %>
 
 <% @lists.each do |list|  %>
-<div class="card mb-5">
- <h2 class="card-title"><%= link_to list.name,  list_path(list)%></h2>
+<div class="cards">
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/?movie)">
+ <h2><%= link_to list.name,  list_path(list)%></h2>
+ </div>
 <% end %>
 </div>
-<%= link_to "Make new list",  new_list_path, class: "btn btn-primary"%>
 </div>
