--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,14 +1,26 @@
-<div class="container">
-<h1><%= @list.name %></h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1503726876301-67e54d319b60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1578&q=80);">
+ <div class="container">
+    <h1><%= @list.name %></h1>
+  </div>
+  </div>
+<div class="container mt-5">
+<%= link_to lists_path  do %>
+<i class="fa-solid fa-backward-step"></i>
+<% end %>
 <% @list.bookmarks.each do |bookmark| %>
-<div class="card">
-<h2 class="card-title"><%= bookmark.movie.title %></h2>
-<div class="card-body">
-<%= bookmark.comment %>
-<%= link_to "Delete",  bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "btn btn-danger"%>
+<div class="cards">
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://source.unsplash.com/random/?movie)">
+<h2><%= bookmark.movie.title%></h2>
 </div>
+<%= link_to bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} do%>
+<i class="fa-regular fa-trash-can"></i>
 <% end %>
 </div>
-<%= link_to "Add Bookmark",  new_list_bookmark_path(@list), class: "btn btn-primary"%>
-<%= link_to "Back",  lists_path, class: "btn btn-success" %>
+
+<p><%= bookmark.comment %></p>
+<p><%= bookmark.movie.overview %></p>
+<% end %>
+<%= link_to new_list_bookmark_path(@list) do %>
+ <i class="fas fa-plus-square btn-light"></i>
+<% end %>
 </div>
