--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @lists.each do |list|  %>
 <div class="cards">
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= list.photo.attatched? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUYB1F4FLmg81Qqg&usqp=CAU', height: 300, crop: :fill %>')">
  <h2><%= link_to list.name,  list_path(list)%></h2>
  </div>
 <% end %>
