--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,17 +1,18 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1503726876301-67e54d319b60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1578&q=80);">
   <div class="container">
     <h1>Movie Lists</h1>
+    <p>A place to list your movie lists</p>
   </div>
 </div>
 <div class="container mt-5">
 <%= link_to new_list_path do %>
  <i class="fas fa-plus-square btn-light"></i>
 <% end %>
-
-<% @lists.each do |list|  %>
 <div class="cards">
+<% @lists.each do |list|  %>
+
 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUYB1F4FLmg81Qqg&usqp=CAU'%>)">
- <h2><%= link_to list.name,  list_path(list)%></h2>
+ <h2><%= link_to list.name,  list_path(list), class: "links" %></h2>
  </div>
 <% end %>
 </div>
