--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1503726876301-67e54d319b60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1578&q=80);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @list.photo.attached? ? cl_image_path(@list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUYB1F4FLmg81Qqg&usqp=CAU'%>)">
  <div class="container">
     <h1><%= @list.name %></h1>
   </div>
@@ -7,21 +7,20 @@
 <%= link_to lists_path  do %>
 <i class="fa-solid fa-backward-step"></i>
 <% end %>
-<% @list.bookmarks.each do |bookmark| %>
-<div class="cards">
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= bookmark.movie.poster_url  %>'))">
-<h2><%= bookmark.movie.title%></h2>
-</div>
-<%= link_to bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} do%>
-<i class="fa-regular fa-trash-can"></i>
-<% end %>
-</div>
-
-<p><%= bookmark.comment %></p>
-<p><%= bookmark.movie.overview %></p>
-<% end %>
 <%= link_to new_list_bookmark_path(@list) do %>
  <i class="fas fa-plus-square btn-light"></i>
 <% end %>
-
+<% @list.bookmarks.each do |bookmark| %>
+<div class="card-product">
+  <img src="<%= bookmark.movie.poster_url %>">
+  <div class="card-product-infos">
+  <h2><%= bookmark.movie.title%></h2>
+  <p><%= bookmark.comment %></p>
+  <p><%= bookmark.movie.overview %></p>
+</div>
+</div>
+<%= link_to bookmark_path(bookmark),  data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} do%>
+<i class="fa-regular fa-trash-can"></i>
+<% end %>
+<% end %>
 </div>
