--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,12 +2,10 @@
   <div class="container">
     <h1>Movie Lists</h1>
     <p>A place to list your movie lists</p>
+    <%= link_to "Add list",  new_list_path, class: "btn btn-success"%>
   </div>
 </div>
 <div class="container mt-5">
-<%= link_to new_list_path do %>
- <i class="fas fa-plus-square btn-light"></i>
-<% end %>
 <div class="cards">
 <% @lists.each do |list|  %>
 
